--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -1,30 +1,25 @@
 .about-section{
     background-color: black;
-    /* border: 2px green solid; */
+
     padding: 5rem 14rem 5rem 12rem;
     display: flex;
     gap: 2rem;
-    /* height: 100vh; */    
 }
 
 
 h1{
     color: whitesmoke;
     font-size: 3rem;
-    /* text-wrap: nowrap; */
+    /* border: 2px solid green; */
 
 }
 
-p{
+.para-text p{
     color: whitesmoke;
     font-size: 1.3rem;
     /* border: 2px solid aqua; */
 }
 
-
-/* .title-section{
-    border: 2px solid aqua;
-} */
 
 .video-section{
     /* border: 2px solid blueviolet; */
@@ -41,8 +36,9 @@ p{
 
 }
 
-@media (max-width: 1100px){
+@media (max-width: 1346px){
     .about-section{
+        /* background-color: rebeccapurple; */
         flex-wrap: wrap-reverse;
         justify-content: center;
         align-items: center;
@@ -61,24 +57,28 @@ p{
         margin: 0 auto;
     }
 
-    p{
+    .para-text p{
         text-align: center;
+       
+
+    }
+
+    .para-text{
+        /* border: 2px solid yellow; */
+        max-width: 700px;
+
     }
 }
 
 @media (max-width: 580px){
     .video-section{
         margin-top: 2.5rem;
-        /* width: 15rem;
-        height: 15rem;
-        width: fit-content; */
     }
 
-    /* .vi */
+    .about-section{
+        padding: 0 3rem;
+
+    }
+
 }
 
-@media (max-width: 458px){
-    .video-section{
-        
-    }
-}
