--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+
 .menu-toggle {
     display: none;
     margin-top: -0.5rem;
@@ -13,8 +20,6 @@
     header ul li{
       display: none;
     }
-
-
 
   }
 
