--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,6 @@
 
 
 html, body{
-  height: 100%;
   width: 100%;
   background-color: black;
 }
